--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.21.0",
+    "express": "^4.21.1",
+    "googleapis": "^144.0.0",
     "hmsfund-be": "file:",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
@@ -27,6 +28,6 @@
     "@types/node": "^22.7.5",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
-    "typescript": "^5.6.2"
+    "typescript": "^5.6.3"
   }
 }
